--- a/index.html
+++ b/index.html
@@ -63,7 +63,6 @@
                 <div className="mt-6 flex flex-wrap items-center justify-center md:justify-end gap-3">
                   <a href="#platforms" className="inline-flex items-center gap-2 rounded-2xl border border-stone-300 px-4 py-2 text-sm hover:bg-stone-100">استمع على Spotify</a>
                   <a href="#episodes" className="inline-flex items-center gap-2 rounded-2xl border border-stone-300 px-4 py-2 text-sm hover:bg-stone-100">شاهد على YouTube</a>
-                  <a href="#subscribe" className="inline-flex items-center gap-2 rounded-2xl border border-stone-300 px-4 py-2 text-sm hover:bg-stone-100">اشترك للتحديثات</a>
                 </div>
                 <div className="mt-6 relative max-w-lg ml-auto">
                   <input type="search" value={query} onChange={e=>setQuery(e.target.value)} placeholder="ابحث داخل الحلقات…" className="w-full rounded-2xl border border-stone-300 bg-white px-4 py-3 pr-10 focus:outline-none focus:ring-2 focus:ring-rose-500"/>
@@ -113,6 +112,7 @@
           {/* About */}
           <section id="about" className="bg-stone-50/60 border-y border-stone-200">
             <div className="container mx-auto px-4 py-16 grid md:grid-cols-2 gap-10 items-center">
+              {/* Text */}
               <div className="order-2 md:order-1">
                 <h2 className="text-2xl md:text-3xl font-extrabold">عن البودكاست</h2>
                 <p className="mt-3 text-stone-700 leading-relaxed">"سحر نوستلجي" مساحة حنين راقية نرجع فيها للذكريات الجميلة ونوثّق قصصًا تصنع الإلهام للحاضر. حلقاتنا مرئية على يوتيوب وصوتية على مختلف المنصات.</p>
@@ -123,13 +123,15 @@
                   <a className="inline-flex items-center gap-2 rounded-2xl border border-stone-300 bg-white px-4 py-2 text-sm hover:bg-stone-100" href="https://www.youtube.com/@sahar_nostalgie.podcast">YouTube</a>
                 </div>
               </div>
+              {/* Host portrait card */}
               <div className="order-1 md:order-2">
-                <div className="grid grid-cols-3 gap-4">
-                  {[ASSETS.hostPortrait, ASSETS.coverDefault, ASSETS.logoSecondary, ASSETS.logoPrimary, ASSETS.coverDefault, ASSETS.hostPortrait].map((src,i)=> (
-                    <img key={i} src={src} alt="guest" className="w-full h-28 object-cover rounded-2xl"/>
-                  ))}
+                <div className="relative max-w-md mx-auto">
+                  <img src={ASSETS.hostPortrait} alt="سحر وليد العنزي — مقدمة البودكاست" className="w-full rounded-3xl shadow-2xl object-cover"/>
+                  <div className="absolute bottom-3 left-3 right-3 bg-white/90 backdrop-blur rounded-2xl p-4 text-sm text-stone-800 shadow">
+                    <div className="font-bold">سحر وليد العنزي</div>
+                    <div className="text-stone-600">إعلامية ومعلّقة صوتية ومدرّبة في التأثير</div>
+                  </div>
                 </div>
-                <p className="mt-3 text-center text-sm text-stone-500">لقطات من الضيوف والأجواء</p>
               </div>
             </div>
           </section>
