--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>بودكاست سحر نوستلجي</title>
+  <link rel="icon" href="./assets/nostalgie-logo-1.png"/>
+  <meta property="og:title" content="بودكاست سحر نوستلجي"/>
+  <meta property="og:description" content="مساحة حنين وذكريات جميلة"/>
+  <meta property="og:type" content="website"/>
+  <meta property="og:image" content="./assets/nostalgie-logo-2.png"/>
+  <meta property="og:locale" content="ar_SA"/>
   <meta name="description" content="مساحة حنين وذكريات جميلة — بودكاست سحر نوستلجي" />
   <!-- Tailwind CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -12,6 +18,7 @@
   <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
   <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+  <script>window.tailwind=window.tailwind||{};tailwind.config={theme:{extend:{colors:{brand:{coral:'#E76457',cream:'#E7E0D6',ink:'#0B0B0B'}}}}}</script>
 </head>
 <body class="bg-gradient-to-b from-stone-50 to-white text-stone-900">
   <div id="root"></div>
@@ -27,7 +34,7 @@
     function App(){
       const [query,setQuery] = React.useState("");
       const episodes = React.useMemo(()=>[
-        {id:1,title:"الحلقة 01 — سحر طفولتنا في التسعينات",date:"2025-10-01",duration:"34:12",summary:"نسترجع ألعاب الطيبين، مسلسلات الكرتون، ونحكي قصصًا صنعت هويتنا اليوم.",tags:["طفولة","التسعينات","ذكريات"],youtube:"https://youtube.com/placeholder-ep1",audio:"https://cdn.example.com/audio/ep1.mp3",cover:ASSETS.coverDefault},
+        {id:1,title:"الحلقة 01 — سحر طفولتنا في التسعينات",date:"2025-10-01",duration:"34:12",summary:"نسترجع ألعاب الطيبين، مسلسلات الكرتون، ونحكي قصصًا صنعت هويتنا اليوم.",tags:["طفولة","التسعينات","ذكريات"],youtube:"https://youtube.com/shorts/7mDWHmT36MY?si=hnwoK9v_YfNU12ki",audio:"https://cdn.example.com/audio/ep1.mp3",cover:ASSETS.coverDefault},
         {id:2,title:"الحلقة 02 — موسيقى زمان اللي ما ننساها",date:"2025-10-15",duration:"41:05",summary:"نغوص في ألبومات شكلت ذائقتنا وكيف أثرت في مشاعرنا ومناسباتنا.",tags:["موسيقى","نوستلجيا"],youtube:"https://youtube.com/placeholder-ep2",audio:"https://cdn.example.com/audio/ep2.mp3",cover:ASSETS.coverDefault},
         {id:3,title:"الحلقة 03 — ضيفنا من الأرشيف",date:"2025-11-01",duration:"50:44",summary:"حوار ممتع مع ضيف عاش التفاصيل الصغيرة والكبيرة في ذلك الزمن.",tags:["حوار","قصص"],youtube:"https://youtube.com/placeholder-ep3",audio:"https://cdn.example.com/audio/ep3.mp3",cover:ASSETS.coverDefault},
       ],[]);
@@ -58,14 +65,14 @@
           <section className="relative overflow-hidden">
             <div className="container mx-auto px-4 py-20 md:py-28 grid md:grid-cols-2 gap-10 items-center">
               <div className="order-2 md:order-1 text-center md:text-right">
-                <h1 className="text-3xl md:text-5xl font-black leading-tight">بودكاست <span className="text-rose-600">سحر نوستلجي</span></h1>
+                <h1 className="text-3xl md:text-5xl font-black leading-tight">بودكاست <span className="text-brand-coral">سحر نوستلجي</span></h1>
                 <p className="mt-4 text-lg md:text-xl text-stone-600">نعيد لك لحظات الفرح، الأصوات والروائح التي علّمتنا معنى الذكرى الجميلة.</p>
                 <div className="mt-6 flex flex-wrap items-center justify-center md:justify-end gap-3">
                   <a href="#platforms" className="inline-flex items-center gap-2 rounded-2xl border border-stone-300 px-4 py-2 text-sm hover:bg-stone-100">استمع على Spotify</a>
                   <a href="#episodes" className="inline-flex items-center gap-2 rounded-2xl border border-stone-300 px-4 py-2 text-sm hover:bg-stone-100">شاهد على YouTube</a>
                 </div>
                 <div className="mt-6 relative max-w-lg ml-auto">
-                  <input type="search" value={query} onChange={e=>setQuery(e.target.value)} placeholder="ابحث داخل الحلقات…" className="w-full rounded-2xl border border-stone-300 bg-white px-4 py-3 pr-10 focus:outline-none focus:ring-2 focus:ring-rose-500"/>
+                  <input type="search" value={query} onChange={e=>setQuery(e.target.value)} placeholder="ابحث داخل الحلقات…" className="w-full rounded-2xl border border-stone-300 bg-white px-4 py-3 pr-10 focus:outline-none focus:ring-2 focus:ring-brand-coral"/>
                 </div>
               </div>
               <div className="order-1 md:order-2">
@@ -143,8 +150,8 @@
               <p className="mt-2 text-stone-600">نداء لطيف لعشّاق الذكريات</p>
             </div>
             <form className="mx-auto max-w-xl rounded-3xl border border-stone-200 bg-white p-4 sm:p-6 flex flex-col sm:flex-row gap-3" onSubmit={e=>e.preventDefault()}>
-              <input type="email" required placeholder="بريدك الإلكتروني" className="flex-1 rounded-2xl border border-stone-300 px-4 py-3 focus:outline-none focus:ring-2 focus:ring-rose-500"/>
-              <button type="submit" className="rounded-2xl bg-rose-600 px-5 py-3 text-white font-semibold hover:bg-rose-700">اشترك</button>
+              <input type="email" required placeholder="بريدك الإلكتروني" className="flex-1 rounded-2xl border border-stone-300 px-4 py-3 focus:outline-none focus:ring-2 focus:ring-brand-coral"/>
+              <button type="submit" className="rounded-2xl bg-brand-coral px-5 py-3 text-white font-semibold hover:bg-brand-coral/90">اشترك</button>
             </form>
           </section>
 
