--- a/index.html
+++ b/index.html
@@ -25,18 +25,16 @@
 
   <script type="text/babel">
     const ASSETS = {
-      logoPrimary: "./assets/nostalgie-logo-1.png",
-      logoSecondary: "./assets/nostalgie-logo-2.png",
-      hostPortrait: "./assets/host-sahar.jpg",
-      coverDefault: "./assets/cover-default.jpg",
+      logoPrimary: "./assets/nostalgie-logo-1.png", // شعار البودكاست
+      hostPortrait: "./assets/host-sahar.jpg"       // صورة المقدّمة سحر
     };
 
     function App(){
       const [query,setQuery] = React.useState("");
       const episodes = React.useMemo(()=>[
-        {id:1,title:"الحلقة 01 — سحر طفولتنا في التسعينات",date:"2025-10-01",duration:"34:12",summary:"نسترجع ألعاب الطيبين، مسلسلات الكرتون، ونحكي قصصًا صنعت هويتنا اليوم.",tags:["طفولة","التسعينات","ذكريات"],youtube:"https://youtube.com/shorts/7mDWHmT36MY?si=hnwoK9v_YfNU12ki",audio:"https://cdn.example.com/audio/ep1.mp3",cover:ASSETS.coverDefault},
-        {id:2,title:"الحلقة 02 — موسيقى زمان اللي ما ننساها",date:"2025-10-15",duration:"41:05",summary:"نغوص في ألبومات شكلت ذائقتنا وكيف أثرت في مشاعرنا ومناسباتنا.",tags:["موسيقى","نوستلجيا"],youtube:"https://youtube.com/placeholder-ep2",audio:"https://cdn.example.com/audio/ep2.mp3",cover:ASSETS.coverDefault},
-        {id:3,title:"الحلقة 03 — ضيفنا من الأرشيف",date:"2025-11-01",duration:"50:44",summary:"حوار ممتع مع ضيف عاش التفاصيل الصغيرة والكبيرة في ذلك الزمن.",tags:["حوار","قصص"],youtube:"https://youtube.com/placeholder-ep3",audio:"https://cdn.example.com/audio/ep3.mp3",cover:ASSETS.coverDefault},
+        {id:1,title:"الحلقة 01 — سحر طفولتنا في التسعينات",date:"2025-10-01",duration:"34:12",summary:"نسترجع ألعاب الطيبين، مسلسلات الكرتون، ونحكي قصصًا صنعت هويتنا اليوم.",tags:["طفولة","التسعينات","ذكريات"],youtube:"https://youtube.com/shorts/7mDWHmT36MY?si=hnwoK9v_YfNU12ki",audio:"https://cdn.example.com/audio/ep1.mp3",cover:ASSETS.logoPrimary},
+        {id:2,title:"الحلقة 02 — موسيقى زمان اللي ما ننساها",date:"2025-10-15",duration:"41:05",summary:"نغوص في ألبومات شكلت ذائقتنا وكيف أثرت في مشاعرنا ومناسباتنا.",tags:["موسيقى","نوستلجيا"],youtube:"https://youtube.com/placeholder-ep2",audio:"https://cdn.example.com/audio/ep2.mp3",cover:ASSETS.logoPrimary},
+        {id:3,title:"الحلقة 03 — ضيفنا من الأرشيف",date:"2025-11-01",duration:"50:44",summary:"حوار ممتع مع ضيف عاش التفاصيل الصغيرة والكبيرة في ذلك الزمن.",tags:["حوار","قصص"],youtube:"https://youtube.com/placeholder-ep3",audio:"https://cdn.example.com/audio/ep3.mp3",cover:ASSETS.logoPrimary},
       ],[]);
       const filtered = React.useMemo(()=>{
         const q = query.trim().toLowerCase();
@@ -57,7 +55,7 @@
                 <a href="#subscribe" className="hover:text-stone-900">اشترك</a>
                 <a href="#contact" className="hover:text-stone-900">تواصل</a>
               </nav>
-              <a href="#episodes" className="inline-flex items-center gap-2 rounded-2xl bg-stone-900 text-white px-3 py-2 text-sm hover:opacity-90">استمع الآن</a>
+              <a href="https://www.youtube.com/@sahar_nostalgie.podcast" className="inline-flex items-center gap-2 rounded-2xl bg-stone-900 text-white px-3 py-2 text-sm hover:opacity-90">استمع الآن</a>
             </div>
           </header>
 
@@ -69,7 +67,7 @@
                 <p className="mt-4 text-lg md:text-xl text-stone-600">نعيد لك لحظات الفرح، الأصوات والروائح التي علّمتنا معنى الذكرى الجميلة.</p>
                 <div className="mt-6 flex flex-wrap items-center justify-center md:justify-end gap-3">
                   <a href="#platforms" className="inline-flex items-center gap-2 rounded-2xl border border-stone-300 px-4 py-2 text-sm hover:bg-stone-100">استمع على Spotify</a>
-                  <a href="#episodes" className="inline-flex items-center gap-2 rounded-2xl border border-stone-300 px-4 py-2 text-sm hover:bg-stone-100">شاهد على YouTube</a>
+                  <a href="https://www.youtube.com/@sahar_nostalgie.podcast" className="inline-flex items-center gap-2 rounded-2xl border border-stone-300 px-4 py-2 text-sm hover:bg-stone-100">شاهد على YouTube</a>
                 </div>
                 <div className="mt-6 relative max-w-lg ml-auto">
                   <input type="search" value={query} onChange={e=>setQuery(e.target.value)} placeholder="ابحث داخل الحلقات…" className="w-full rounded-2xl border border-stone-300 bg-white px-4 py-3 pr-10 focus:outline-none focus:ring-2 focus:ring-brand-coral"/>
@@ -77,7 +75,7 @@
               </div>
               <div className="order-1 md:order-2">
                 <div className="relative mx-auto max-w-xl">
-                  <img src={ASSETS.logoSecondary} alt="غلاف" className="w-full rounded-3xl shadow-2xl"/>
+                  <img src={ASSETS.logoPrimary} alt="شعار بودكاست سحر نوستلجي" className="w-full rounded-3xl shadow-2xl"/>
                   <div className="absolute -bottom-5 -left-5 bg-white/90 backdrop-blur rounded-2xl shadow p-4 text-sm"><span className="font-bold">{episodes.length}</span> حلقات منشورة — المزيد قريبًا</div>
                 </div>
               </div>
