--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       </div>
       <div class="order-1 md:order-2">
         <div class="relative max-w-md mx-auto">
-          <img src="./assets/host-sahar.jpg" alt="سحر وليد العنزي — مقدمة البودكاست"
+          <img src="./assets/host-sahar.jpg" alt="سحر وليد العنيزي — مقدمة البودكاست"
                class="w-full h-auto rounded-3xl shadow-2xl object-cover">
           <div class="absolute bottom-3 left-3 right-3 bg-white/90 backdrop-blur rounded-2xl p-4 text-sm text-stone-800 shadow">
             <div class="font-bold">سحر وليد العنزي</div>
