--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <div class="order-2 md:order-1">
         <h2 class="text-2xl md:text-3xl font-extrabold">عن البودكاست</h2>
         <p class="mt-3 text-stone-700 leading-relaxed">
-          "سحر نوستلجي" مساحة حنين راقية نرجع فيها للذكريات الجميلة ونوثّق قصصًا تصنع الإلهام للحاضر.
+          "سحر نوستلجي" مساحة حنين راقية نرجع فيها للذكريات الجميلة ونوثّق قصصًاً تصنع الإلهام للحاضر.
           حلقاتنا مرئية على يوتيوب وصوتية على مختلف المنصات.
         </p>
         <ul class="mt-5 space-y-2 text-stone-700">
@@ -95,7 +95,7 @@
           <img src="./assets/host-sahar.jpg" alt="سحر وليد العنيزي — مقدمة البودكاست"
                class="w-full h-auto rounded-3xl shadow-2xl object-cover">
           <div class="absolute bottom-3 left-3 right-3 bg-white/90 backdrop-blur rounded-2xl p-4 text-sm text-stone-800 shadow">
-            <div class="font-bold">سحر وليد العنزي</div>
+            <div class="font-bold">سحر وليد العنيزي</div>
             <div class="text-stone-600">إعلامية ومعلّقة صوتية ومدرّبة في التأثير</div>
           </div>
         </div>
@@ -108,7 +108,7 @@
     const channelAudio = "https://soundcloud.com/saharalenaizi/uitee5fyuokb";
 
     const episodes = [
-      {id:1, ep:"01", title:"سحر طفولتنا في التسعينات", date:"2025-10-01", duration:"34:12",
+      {id:1, ep:"01", title:"سحر طفولتنا في السبعينات وما بعد ", date:"2025-10-01", duration:"34:12",
        summary:"نسترجع ألعاب الطيبين، مسلسلات الكرتون، ومواقف صنعت هويتنا اليوم.",
        youtube:channelVideo, audio:channelAudio},
       {id:2, ep:"02", title:"موسيقى زمان اللي ما ننساها", date:"2025-10-15", duration:"41:05",
