--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <div class="order-2 md:order-1">
         <h2 class="text-2xl md:text-3xl font-extrabold">عن البودكاست</h2>
         <p class="mt-3 text-stone-700 leading-relaxed">
-          "سحر نوستلجي" مساحة حنين راقية نرجع فيها للذكريات الجميلة ونوثّق قصصًا تصنع الإلهام للحاضر.
+          "سحر نوستلجي" مساحة حنين راقية نرجع فيها للذكريات الجميلة ونوثّق قصصاً تصنع الإلهام للحاضر.
           حلقاتنا مرئية على يوتيوب وصوتية على مختلف المنصات.
         </p>
         <ul class="mt-5 space-y-2 text-stone-700">
@@ -164,7 +164,7 @@
     const channelAudio = "https://soundcloud.com/saharalenaizi/uitee5fyuokb";
 
     const episodes = [
-      {id:1, ep:"01", title:"سحر طفولتنا في التسعينات", date:"2025-10-01", duration:"34:12",
+      {id:1, ep:"01", title:"سحر طفولتنا في السبعينات,الثمانينات,التسعينات", date:"2025-10-01", duration:"34:12",
        summary:"نسترجع ألعاب الطيبين، مسلسلات الكرتون، ومواقف صنعت هويتنا اليوم.",
        youtube:channelVideo, audio:channelAudio},
       {id:2, ep:"02", title:"موسيقى زمان اللي ما ننساها", date:"2025-10-15", duration:"41:05",
